Deck: Fixes for dark mode and selected image

--- a/src/Deck/src/styles/abstracts/_variables.scss
+++ b/src/Deck/src/styles/abstracts/_variables.scss
@@ -15,7 +15,8 @@ $divider-height: 3px;
 
 $nav-width: 250px;
 
-$duration-default: 0.27s;
+$duration-default: 270ms;
+$transition-mode: ease-in-out;
 
 $box-shadow: 0 0 20px $backgroundcolor;
 
