--- a/src/Deck/src/styles/components/_darkmode.scss
+++ b/src/Deck/src/styles/components/_darkmode.scss
@@ -16,12 +16,13 @@ label.darkmode-label {
     z-index: 199;
 
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     color: var(--foregroundcolor-lighter);
 
     .inner{
         fill: var(--backgroundcolor-light);
-        transition: transform variables.$duration-default ease-out;
+        transition: transform variables.$duration-default variables.$transition-mode;
     }
 
     svg{
